[gd_scene load_steps=7 format=2]

[ext_resource path="res://world.gd" type="Script" id=1]
[ext_resource path="res://mass.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, -100, 100, 0, 0, 0 )

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.9

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 5 )

[node name="world" type="Node2D"]
script = ExtResource( 1 )

[node name="ground" type="StaticBody2D" parent="."]
position = Vector2( 0, 100 )
physics_material_override = SubResource( 1 )

[node name="polygon" type="Polygon2D" parent="ground"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 0, 0, 100, 0, 0, -100 )

[node name="shape" type="CollisionShape2D" parent="ground"]
shape = SubResource( 2 )

[node name="mass" type="RigidBody2D" parent="."]
editor/display_folded = true
position = Vector2( 53.536, 46.464 )
rotation = 0.785398
physics_material_override = SubResource( 3 )
continuous_cd = 2
contacts_reported = 10
contact_monitor = true
can_sleep = false
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="polygon" type="Polygon2D" parent="mass"]
polygon = PoolVector2Array( 10, -5, -10, -5, -10, 5, 10, 5 )

[node name="shape" type="CollisionShape2D" parent="mass"]
shape = SubResource( 4 )

[node name="velocity_vector" type="Line2D" parent="mass"]
width = 1.0
default_color = Color( 0.823529, 0.309804, 0.309804, 1 )
texture_mode = -1094713346
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="acceleration_vector" type="Line2D" parent="mass"]
width = 1.0
default_color = Color( 0.00784314, 1, 0, 1 )
texture_mode = 0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="mass2" type="RigidBody2D" parent="."]
editor/display_folded = true
position = Vector2( 37.4381, -8.48356 )
rotation = 1.88117
physics_material_override = SubResource( 3 )
continuous_cd = 2
contacts_reported = 10
contact_monitor = true
can_sleep = false
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="polygon" type="Polygon2D" parent="mass2"]
polygon = PoolVector2Array( 10, -5, -10, -5, -10, 5, 10, 5 )

[node name="shape" type="CollisionShape2D" parent="mass2"]
shape = SubResource( 4 )

[node name="velocity_vector" type="Line2D" parent="mass2"]
width = 1.0
default_color = Color( 0.823529, 0.309804, 0.309804, 1 )
texture_mode = 1040187392
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="acceleration_vector" type="Line2D" parent="mass2"]
width = 1.0
default_color = Color( 0.00784314, 1, 0, 1 )
texture_mode = 0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="path" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0
default_color = Color( 0, 0, 0, 1 )
texture_mode = 0
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[connection signal="body_shape_entered" from="mass" to="mass" method="_on_mass_body_shape_entered"]
[connection signal="body_shape_entered" from="mass2" to="mass2" method="_on_mass_body_shape_entered"]
